set(CMAKE_JNI_TARGET TRUE)
add_library(xlfparser-jni SHARED ${xlfparserjni_src_files})
set_target_properties(xlfparser-jni PROPERTIES COMPILE_FLAGS "-Wall")
#set_target_properties(xlfparser-jni PROPERTIES LINK_FLAGS "${xlfparserjni_libs} -lxlfparser")
target_link_libraries(xlfparser-jni ${xlfparserjni_libs})
target_link_libraries(xlfparser-jni "-lxlfparser")
foreach(dep_include_dir ${xlfparserjni_include})
    get_target_property(current_cflags xlfparser-jni COMPILE_FLAGS)
    set_target_properties(xlfparser-jni PROPERTIES COMPILE_FLAGS "${current_cflags} -I${dep_include_dir}")
endforeach()
